<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OpenDelta</string>
    <string name="title">System updates</string>

    <string name="action_networks">Networks</string>
    <string name="title_networks">Auto-update networks</string>
    <string name="network_2g">2G</string>
    <string name="network_3g">3G</string>
    <string name="network_4g">4G</string>
    <string name="network_wifi">Wi-Fi</string>
    <string name="network_ethernet">Ethernet</string>
    <string name="network_unknown">Other</string>

    <string name="action_about">About</string>

    <string name="about_content"><![CDATA[
        Copyright &copy; _COPYRIGHT_OPENDELTA_ <b>Jorrit \'Chainfire\' Jongma</b><br>
        <br>
        Originally created for <b>The OmniROM Project</b><br>
        <br>
        Licensed under the terms of the <b>GNU General Public License, version 3.0 (GPLv3)</b><br>
        <br>
        Delta decoding based on <b>xdelta</b>, copyright &copy; _COPYRIGHT_XDELTA_ <b>Joshua MacDonald</b><br>
    ]]></string>

    <string name="state_action_none">Your system is up to date</string>
    <string name="state_action_checking">Checking for updates &#8230;</string>
    <string name="state_action_checking_md5">Verifying file &#8230;</string>
    <string name="state_action_searching">Searching for files &#8230;</string>
    <string name="state_action_searching_md5">Verifying file &#8230;</string>
    <string name="state_action_downloading">Downloading &#8230;</string>
    <string name="state_action_applying">Patching &#8230;</string>	
    <string name="state_action_applying_patch">Patching &#8230;</string>
    <string name="state_action_applying_md5">Verifying file &#8230;</string>
    <string name="state_action_ready">An update is available</string>
    <string name="state_error_disk_space">Not enough disk space !</string>
    <string name="state_error_unknown">Unknown error</string>

    <string name="error_disk_space_sub" formatted="false">%d MiB available, %d MiB required</string>

    <string name="notify_update_available">An update is available</string>
    <string name="notify_checking">Checking for updates &#8230;</string>

    <string name="last_checked" formatted="false">Last checked on %s at %s</string>
    <string name="last_checked_never">We\'ve never checked, maybe you would like to do so ?</string>

    <string name="button_check_now">Check now &#8230;</string>
    <string name="button_flash_now">Flash now</string>
    
    <!-- updates from 2013/12/18 -->
    
    <string name="action_secure_mode">Secure</string>
    
    <string name="secure_mode_enabled_title">Secure mode: enabled</string>
    <string name="secure_mode_enabled_description"><![CDATA[The update\'s cryptographic signature will be verified before flashing to confirm its origin, and no additional updates will be flashed. This mode is only compatible with <b>TWRP</b>.]]></string>

    <string name="secure_mode_disabled_title">Secure mode: disabled</string>
    <string name="secure_mode_disabled_description"><![CDATA[Additional updates are flashed if present. Note that any (malicious) software package can place these updates and gain full system access. Caution is advised.]]></string>
    
    <string name="recovery_notice_title">Notice</string>
    <string name="recovery_notice_description_secure"><![CDATA[Flashing updates in the current mode is only supported on <b>TWRP</b> recoveries. Please make sure you are running a compatible recovery before continuing.]]></string>
    <string name="recovery_notice_description_not_secure"><![CDATA[Flashing updates in the current mode is only officially supported on <b>TWRP</b> recoveries. <i>Official</i> <b>CWM</b> builds are <i>not</i> supported, though some <i>community-built</i> versions of <b>CWM</b> <i>may</i> still work. Please make sure you are running a compatible recovery before continuing.]]></string>
    
    <string name="flash_after_update_notice_title">Notice</string>
    <string name="flash_after_update_notice_description"><![CDATA[Additional updates are present in the <b>FlashAfterUpdate</b> folder, but secure mode is enabled. If you continue, these additional updates will <b>not</b> be flashed.]]></string>    

    <!-- additions for developer mode -->
    <string name="action_dev_mode">Log in as developer</string>
    <string name="action_dev_mode_on">Logged in as developer</string>
    <string name="dev_mode_login_logout_cancel">Cancel</string>
    <string name="dev_mode_login">Log in</string>
    <string name="dev_mode_logout">Log out</string>
    <string name="dev_mode_login_password">Password</string>
    <string name="dev_mode_remember_dev_login">Remember</string>
    <string name="dev_mode_login_wrong_pw">Wrong password</string>
    <string name="dev_mode_logout_dev_mode">Log out of dev mode?</string>
</resources>
