<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_height="match_parent"
    android:paddingLeft="10dp" android:paddingRight="10dp"
    android:background="#fff" android:layout_width="300dp"
    android:paddingTop="10dp">
    <EditText android:layout_height="wrap_content"
        android:inputType="textPassword" android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:hint="@string/dev_mode_login_password"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/remember_dev_login"
        android:text="@string/dev_mode_remember_dev_login"/>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content" android:id="@+id/linearLayout1">
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_weight="0.5"
            android:id="@+id/btnCancel" android:text="@string/dev_mode_login_logout_cancel"/>
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_weight="0.5"
            android:id="@+id/btnLogin" android:text="@string/dev_mode_login"/>
    </LinearLayout>
</LinearLayout>